tests/snapshots/cargo_leet__tool__core__helpers__problem_description__tests__solutions count-of-substrings-containing-every-vowel-and-k-consonants-ii.snap
---
source: src/tool/core/helpers/problem_description.rs
expression: problem_description.get_solutions()
---
[
    "0",
    "1",
    "3",
]
