tests/snapshots/cargo_leet__tool__core__helpers__problem_description__tests__solutions flood-fill.snap
---
source: src/tool/core/helpers/problem_description.rs
expression: problem_description.get_solutions()
---
[
    "[[2,2,2],[2,2,0],[2,0,1]]",
    "[[0,0,0],[0,0,0]]",
]
