tests/snapshots/cargo_leet__tool__core__helpers__problem_description__tests__solutions valid-parentheses.snap
---
source: src/tool/core/helpers/problem_description.rs
expression: problem_description.get_solutions()
---
[
    "true",
    "true",
    "false",
    "true",
]
